@@ -5,6 +5,7 @@
 	Define createHeaderRow function.
 	Add opts.createRow parameter to appendDetailRows function.
 	Add opts.keys parameter to createDetailRow function.
+	Add opts.detailKeys parameter to appendDetailRows function.
 
 2017-12-28  larissa9839  <larissa9839@gmail.com>
 
